3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/object.c: change get_owner() so that it also returns no valid owner if
   the owner is removed.  This fixes a crash if a player quits but is still
   sitting at the play again prompt when something he owns kills something.
server/skill_util.c: Fix show_skills() so that if the character has too many
   skills for whatever reason, we don't crash, and instead print an error
   to the player.
server/spell_attack.c: Fix typo - not sure actual effect, but probably nothing
   good. '+ +' should just have been '+'
MSW 2004-02-12

common/Makefile.am: Clean up proto - lex seems to toss some new symbols in
  now days.
common/map.c, common/object.c, server/player.c, socket/item.c,
   socket/request.c: change parameters of get_map_from_coord from int to
   sint16, so the op->x,op->y can get passed directly in.  Update callers of
   this function.
lib/archetypes: Add damned 1 to the shop floors.
server/pets.c: Fix problem with big (multisquare) pets following the owner
   across tiled map boundaries.
socket/item.c: Fix problem of players being able to see everything within
   containers by just looking at them.
MSW 2004-02-10

common/treasure.c: add_abilities(): For potions and horns (spell casting
   objects) convert the other_arch into a spell and put into the object -
   otherwise, the spell casting object casts the wrong spell.
common/object.c: Clean up formatting of copy_object.  Only real code change
  is to fix events - copied event data wasn't getting malloc'd, and thus
  when another object of that event was freed, it freed the event data
  for all objects derived from it.